<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/containerBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.QuizFragment">


    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondaryBackground"
        android:padding="@dimen/default_padding"
        android:text="@string/score"
        android:textColor="@color/textColor"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDog"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColor"
        android:text="@string/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDog" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion">

        <RadioButton
            android:id="@+id/rdAnswer0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/rdAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/rdAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/rdAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/rdAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        android:textColor="@color/textColor"
        android:background="@color/secondaryBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSkip"
        app:layout_constraintTop_toBottomOf="@+id/rdGroup" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/skip"
        android:textColor="@color/textColor"
        android:background="@color/secondaryBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGroup" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondaryBackground"
        android:padding="@dimen/default_padding"
        android:text="@string/time"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toEndOf="@+id/txtScore"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/default_elevation"
        android:background="@color/containerBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgDogProgress"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/dog" />
    </FrameLayout>
</android.support.constraint.ConstraintLayout>